# axenta-geozones-service

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml  pytest.ini
_project/: asgi.py  routes.py  settings.py  urls.py  wsgi.py
apps/geozones/: admin.py  apps.py  schemas.py
apps/geozones/api/: filters.py  schema.py  serializers.py  urls.py  views.py
apps/geozones/migrations/: 0001_initial.py  0002_alter_check_lon_alter_geozone_geometry_and_more.py
apps/geozones/models/: __init__.py  checks.py  geozones.py
apps/geozones/services/: __init__.py  checks.py
apps/geozones/tests/: test_models.py  test_services.py  test_views.py
docker/: Dockerfile
